# dwu

./: .gitignore  Pipfile  README.md  __main__.spec  dwu.exe.REMOVED.git-id  dwu.spec  main.py  main.spec  pyproject.toml  requirements.txt
dwu/: __main__.py  app.py  cli.py  config_manager.py  crash_handler.py  gui.py  logger.py  manager.py  metadata.py  scraper.py  skip_manager.py  splash.py  systray.py  utils.py  wallpaper_manager.py  wallresult.py
dwu v1.0.0/: dwu-v1.0.0.zip.REMOVED.git-id
dwu/backends/: __init__.py  awww.py  base.py  feh.py  nitrogen.py  swww.py
systemd/: dwu.service  dwu.timer
